# IP-Tokenization

./: .algokit.toml  Ip_tokenization.code-workspace  README.md  compile.py  deploy_contract.py  requirements.txt
.algokit/: .copier-answers.yml
ip-nexus-flow/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ip-nexus-flow/src/: App.tsx  index.css
ip-nexus-flow/src/components/: WalletConnection.tsx
ip-nexus-flow/src/hooks/: useAlgorand.tsx  useSmartContract.tsx
ip-nexus-flow/src/lib/: utils.ts
ip-nexus-flow/src/pages/: Index.tsx
projects/Ip_tokenization-contracts/: .algokit.toml  README.md  pyproject.toml
projects/Ip_tokenization-contracts/.algokit/: .copier-answers.yml
projects/Ip_tokenization-contracts/smart_contracts/: __main__.py  deploy.py
projects/Ip_tokenization-contracts/smart_contracts/artifacts/ip_tokens/: IPTokenizationPlatform.approval.puya.map  IPTokenizationPlatform.arc56.json  IpTokens.approval.puya.map  IpTokens.approval.teal  IpTokens.arc56.json  ip_tokens_client.py
projects/Ip_tokenization-contracts/smart_contracts/ip_tokens/: contract.py  deploy_config.py
projects/Ip_tokenization-contracts/smart_contracts/ip_tokens/smart_contracts/artifacts/ip_tokens/: IPTokenizationPlatform.approval.puya.map  IPTokenizationPlatform.approval.teal  IPTokenizationPlatform.arc32.json
projects/Ip_tokenization-frontend/: .algokit.toml  README.md  package-lock.json  package.json  vite.config.ts
smart_contracts/: __main__.py  deploy.py
smart_contracts/ip_tokens/: contract.py
(+17 files in other folders)
